--- a/index.html
+++ b/index.html
@@ -1,130 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
-    <title>Резюме студента</title>
+    <title>Змейка</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            background-color: #f0f0f0;
         }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
+
+        canvas {
+            background-color: #000;
+            border: 2px solid #fff;
         }
-        h1, h2, h3 {
-            margin-top: 0;
-        }
-        .section {
+
+        #score {
+            font-size: 24px;
+            color: #333;
+            font-family: Arial, sans-serif;
             margin-bottom: 20px;
         }
-        .section h2 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
-        }
-        .section p {
-            margin: 10px 0;
-        }
-        .buttons {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        .button {
-            background-color: #4CAF50;
-            color: white;
+
+        #startButton {
+            margin-bottom: 10px;
             padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
             font-size: 16px;
-            margin: 4px 2px;
             cursor: pointer;
+            background-color: #28a745;
+            color: white;
+            border: none;
             border-radius: 5px;
-        }
-        .button:hover {
-            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Резюме</h1>
-        </header>
-        <section class="section">
-            <h2>Личная информация</h2>
-            <p><strong>Фамилия:</strong> Леута</p>
-            <p><strong>Имя:</strong> Ксения</p>
-            <p><strong>Отчество:</strong> Петровна</p>
-            <p><strong>Дата рождения:</strong> 29.11.2005</p>
-            <p><strong>Телефон:</strong> +375 (29) 896-20-61</p>
-            <p><strong>Email:</strong> leutaksenia683@gmail.com</p>
-            <p><strong>Адрес:</strong> г. Гродно, ул. Новооктябрьская, 14 кв. 304а</p>
-        </section>
-        <section class="section">
-            <h2>Образование</h2>
-            <p><strong>Образование:</strong> Гродненский государственный политехнический колледж</p>
-            <p><strong>Специальность:</strong> Программное обеспечение информационных технологий</p>
-        </section>
-        <section class="section">
-            <h2>Опыт работы</h2>
-            <p><strong>Компания:</strong> Гроднооблдорстрой "СХФ Доброселецкий"</p>
-            <p><strong>Должность:</strong> Техник-программист</p>
-            <p><strong>Период работы:</strong> 02.02.2024 - 14.03.2024</p>
-            <p><strong>Обязанности:</strong></p>
-            <ul>
-                <li>Забота о правильном оформлении всех необходимых документов, связанных с информационной технологией (IT).</li>
-                <li>Установка и настройка программного обеспечения на компьютерах с учетом потребностей сотрудников и требований безопасности.</li>
-                <li>Настройка и поддержание работы сетевого оборудования (маршрутизаторов, коммутаторов, маршрутизации сетевого трафика).</li>
-                <li>Настройка и поддержание работы сетевого оборудования (маршрутизаторов, коммутаторов, маршрутизации сетевого трафика).</li>
-                <li>Установка и обновление драйверов для обеспечения совместимости и производительности.</li>
-            </ul>
-        </section>
-        <section class="section">
-            <h2>Навыки</h2>
-            <ul>
-                <li>Понимание языков программирования Python, C#</li>
-                <li>Понимание принципов работы операционных систем, таких как Linux, Windows, а также умение настраивать и обслуживать их.</li>
-                <li>Умение эффективно коммуницировать с другими членами команды, клиентами и пользователями для понимания их требований и предоставления качественного сервиса.</li>
-                <li>Опыт работы в коллективе, способность эффективно взаимодействовать с другими разработчиками, тестировщиками, администраторами и другими специалистами.</li>
-            </ul>
-        </section>
-        <section class="section">
-            <h2>Дополнительная информация</h2>
-            <p><strong>Иностранные языки:</strong> Английский язык</p>
-        </section>
-        <section class="section">
-            <h2>Изображение</h2>
-            <img src="images.jpg" alt="Фото">
-        </section>
-        <section class="section">
-            <h2>Видео</h2>
-            <div class="wrapper"> 
-                <div class="video">
-                    <video controls class="video_item" src="video_2024-01-09_08-39-44.mp4"></video>
-                </div>
-            </div>
-        </section>
-        <section class="section">
-            <h2>Лабораторные работы</h2>
-            <div class="buttons">
-                <a href="13-14лаба/index.html" class="button">Лаба 13-14</a>
-                <a href="9лаба-скрипт/9лаба-скрипт/index.html" class="button">Лаба 9</a>
-                <a href="10-12/lr10-12.html" class="button">Лаба 10-12</a>
-                <a href="лб8_форма/index.html" class="button">Лб 8-форма</a>
-                <a href="лб8_карточка/index.html" class="button">Лб-карточка</a>
-                <a href="5-6-7-8 ЛР/" class="button">Лб 5, 6, 7</a>
-            </div>
-        </section>
-    </div>
+    <div id="score">Счёт: 0</div>
+    <button id="startButton">Начать игру</button>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
+
+    <script>
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+
+        const boxSize = 20;  // Размер каждой части змеи и еды
+        let score = 0;
+
+        let snake = [
+            { x: 160, y: 160 },  // Начальная позиция змеи
+            { x: 140, y: 160 },
+            { x: 120, y: 160 }
+        ];
+
+        let food = {
+            x: Math.floor(Math.random() * (canvas.width / boxSize)) * boxSize,
+            y: Math.floor(Math.random() * (canvas.height / boxSize)) * boxSize
+        };
+
+        let dx = boxSize;  // Змейка двигается вправо по умолчанию
+        let dy = 0;
+        let gameStarted = false;  // Флаг для отслеживания начала игры
+
+        function drawSnake() {
+            snake.forEach(part => {
+                ctx.fillStyle = '#28a745';  // Цвет змеи
+                ctx.fillRect(part.x, part.y, boxSize, boxSize);  // Рисуем сегмент змеи
+                ctx.strokeStyle = '#000';  // Цвет границы сегмента
+                ctx.strokeRect(part.x, part.y, boxSize, boxSize);  // Рисуем границу
+            });
+        }
+
+        function moveSnake() {
+            const head = { x: snake[0].x + dx, y: snake[0].y + dy };  // Новая голова
+            snake.unshift(head);  // Добавляем новую голову в начало массива
+
+            if (head.x === food.x && head.y === food.y) {
+                score++;  // Увеличиваем счёт
+                document.getElementById('score').innerText = 'Счёт: ' + score;  // Обновляем счёт
+                generateFood();
+            } else {
+                snake.pop();  // Удаляем последний сегмент, если еда не съедена
+            }
+        }
+
+        function generateFood() {
+            food.x = Math.floor(Math.random() * (canvas.width / boxSize)) * boxSize;
+            food.y = Math.floor(Math.random() * (canvas.height / boxSize)) * boxSize;
+
+            snake.forEach(part => {
+                if (part.x === food.x && part.y === food.y) {
+                    generateFood();  // Если еда генерируется на змее, обновляем
+                }
+            });
+        }
+
+        function drawFood() {
+            ctx.fillStyle = '#ff6347';  // Цвет еды
+            ctx.fillRect(food.x, food.y, boxSize, boxSize);  // Рисуем еду
+        }
+
+        function changeDirection(event) {
+            if (!gameStarted) return;
+
+            const key = event.keyCode;
+            if (key === 37 && dx === 0) {  // Влево
+                dx = -boxSize;
+                dy = 0;
+            } else if (key === 38 && dy === 0) {  // Вверх
+                dx = 0;
+                dy = -boxSize;
+            } else if (key === 39 && dx === 0) {  // Вправо
+                dx = boxSize;
+                dy = 0;
+            } else if (key === 40 && dy === 0) {  // Вниз
+                dx = 0;
+                dy = boxSize;
+            }
+        }
+
+        function checkCollision() {
+            const head = snake[0];
+
+            if (head.x < 0 || head.y < 0 || head.x >= canvas.width || head.y >= canvas.height) {
+                alert('Игра окончена! Ваш счёт: ' + score);
+                document.location.reload();
+            }
+
+            for (let i = 4; i < snake.length; i++) {
+                if (head.x === snake[i].x && head.y === snake[i].y) {
+                    alert('Игра окончена! Ваш счёт: ' + score);
+                    document.location.reload();
+                }
+            }
+        }
+
+        function gameLoop() {
+            if (!gameStarted) return;
+
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            moveSnake();
+            drawSnake();
+            drawFood();
+            checkCollision();
+            setTimeout(gameLoop, 100);
+        }
+
+        document.getElementById('startButton').addEventListener('click', () => {
+            if (!gameStarted) {
+                gameStarted = true;
+                generateFood();
+                gameLoop();
+            }
+        });
+
+        document.addEventListener('keydown', changeDirection);
+    </script>
 </body>
 </html>
